new datasets support and small fix

--- a/example.ipynb
+++ b/example.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -17,7 +24,41 @@
    "outputs": [],
    "source": [
     "from hri_tools import HumorDataset\n",
-    "from hri_tools import SUPPORTED_DATASETS"
+    "from hri_tools import SUPPORTED_DATASETS\n",
+    "from hri_tools import downlaod"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env HRI_URL=###PASTE HERE###\n",
+    "%env HRI_PASSWORD=###PASTE HERE###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "downlaod()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load datasets and get statistics"
    ]
   },
   {
@@ -29,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['pun_of_the_day', 'one_liners', 'reddit_jokes_last_laught', 'short_jokes', 'funlines', 'human_microedit']\n"
+      "['pun_of_the_day', 'one_liners', 'reddit_jokes_last_laught', 'short_jokes', 'funlines_v1', 'human_microedit_v1', 'funlines_v2', 'human_microedit_v2', 'unfun_me', 'semeval_2021_task_7', 'semeval_2017_task_7', 'reddit_jokes_github']\n"
      ]
     }
    ],
@@ -89,16 +130,52 @@
       "        Mean length by symbols is 232.2224598815061 (without space is 194.80167272805758)\n",
       "        \n",
       "\n",
-      "        Statistics report for funlines dataset:\n",
-      "        Number of samples: 8248, pos - 1079, neg - 7169.\n",
-      "        Mean word length is 12.683680892337536\n",
-      "        Mean length by symbols is 72.62657613967022 (without space is 60.91028128031038)\n",
+      "        Statistics report for funlines_v1 dataset:\n",
+      "        Number of samples: 15731, pos - 8248, neg - 7483.\n",
+      "        Mean word length is 12.731803445426229\n",
+      "        Mean length by symbols is 73.31803445426229 (without space is 61.249125929692966)\n",
       "        \n",
       "\n",
-      "        Statistics report for human_microedit dataset:\n",
-      "        Number of samples: 15095, pos - 957, neg - 14138.\n",
-      "        Mean word length is 12.410135806558463\n",
-      "        Mean length by symbols is 70.33189797946339 (without space is 58.82696257038754)\n",
+      "        Statistics report for human_microedit_v1 dataset:\n",
+      "        Number of samples: 25398, pos - 15095, neg - 10303.\n",
+      "        Mean word length is 13.306480825261831\n",
+      "        Mean length by symbols is 72.39077880148044 (without space is 60.46964327899835)\n",
+      "        \n",
+      "\n",
+      "        Statistics report for funlines_v2 dataset:\n",
+      "        Number of samples: 9427, pos - 1944, neg - 7483.\n",
+      "        Mean word length is 12.772886390155936\n",
+      "        Mean length by symbols is 73.30720271560412 (without space is 61.39089848308051)\n",
+      "        \n",
+      "\n",
+      "        Statistics report for human_microedit_v2 dataset:\n",
+      "        Number of samples: 11959, pos - 1656, neg - 10303.\n",
+      "        Mean word length is 14.332218412910779\n",
+      "        Mean length by symbols is 74.0159712350531 (without space is 62.24232795384229)\n",
+      "        \n",
+      "\n",
+      "        Statistics report for unfun_me dataset:\n",
+      "        Number of samples: 3927, pos - 1174, neg - 2753.\n",
+      "        Mean word length is 9.046855105678635\n",
+      "        Mean length by symbols is 55.152788388082506 (without space is 47.481538069773364)\n",
+      "        \n",
+      "\n",
+      "        Statistics report for semeval_2021_task_7 dataset:\n",
+      "        Number of samples: 10000, pos - 6179, neg - 3821.\n",
+      "        Mean word length is 24.9075\n",
+      "        Mean length by symbols is 113.1762 (without space is 93.2073)\n",
+      "        \n",
+      "\n",
+      "        Statistics report for semeval_2017_task_7 dataset:\n",
+      "        Number of samples: 4030, pos - 2878, neg - 1152.\n",
+      "        Mean word length is 13.19727047146402\n",
+      "        Mean length by symbols is 59.95483870967742 (without space is 47.77741935483871)\n",
+      "        \n",
+      "\n",
+      "        Statistics report for reddit_jokes_github dataset:\n",
+      "        Number of samples: 194553, pos - 11763, neg - 182790.\n",
+      "        Mean word length is 47.66697506592034\n",
+      "        Mean length by symbols is 239.05603614439252 (without space is 193.8032669760939)\n",
       "        \n"
      ]
     }
@@ -113,6 +190,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -121,28 +205,52 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        Example from \"pun_of_the_day Dataset\"\n",
-      "        Humorous eaxmple: my brother wishes he could compose smutty verse as good as mine is this scribbling ribaldry\n",
+      "        Example from \"pun_of_the_day\" Dataset\n",
+      "        Humorous eaxmple: the optical scientist who stole his colleague s bifocals was sentenced to three years in a state prism\n",
       "        \n",
       "\n",
-      "        Example from \"one_liners Dataset\"\n",
-      "        Humorous eaxmple: I have this nagging fear that everyone is out to make me paranoid.\n",
+      "        Example from \"one_liners\" Dataset\n",
+      "        Humorous eaxmple: Better to light one candle than to curse the darkness.\n",
       "        \n",
       "\n",
-      "        Example from \"reddit_jokes_last_laught Dataset\"\n",
-      "        Humorous eaxmple: My girlfriend is a pornstar She is going to be very pissed when she finds out.\n",
+      "        Example from \"reddit_jokes_last_laught\" Dataset\n",
+      "        Humorous eaxmple: I tell everyone I can about the health benefits of eating dried grapes. It's all about raisin awareness. \n",
       "        \n",
       "\n",
-      "        Example from \"short_jokes Dataset\"\n",
-      "        Humorous eaxmple: Why do male midgets laugh so hard when they play football ? It's because the grass tickles their balls.\n",
+      "        Example from \"short_jokes\" Dataset\n",
+      "        Humorous eaxmple: A grasshopper walks into a bar and the bartender says \"hey! We have a drink named after you!\" And the grasshopper says \"You have a drink named Steve?!\"\n",
       "        \n",
       "\n",
-      "        Example from \"funlines Dataset\"\n",
-      "        Humorous eaxmple: Reporters claim new blindfolds will hinder impeachment coverage\n",
+      "        Example from \"funlines_v1\" Dataset\n",
+      "        Humorous eaxmple: Trump says he will designate Mexican abuela  cartels as terror organizations\n",
       "        \n",
       "\n",
-      "        Example from \"human_microedit Dataset\"\n",
-      "        Humorous eaxmple: New WH comms director Anthony Scaramucci deletes old braincells contradicting Trump\n",
+      "        Example from \"human_microedit_v1\" Dataset\n",
+      "        Humorous eaxmple: Liberty University Alumni To Return Diplomas Over School mascot  's Trump Support\n",
+      "        \n",
+      "\n",
+      "        Example from \"funlines_v2\" Dataset\n",
+      "        Humorous eaxmple: Trump orders toilet locks  : Americans are ‘ flushing toilets 10 times , 15 times ’\n",
+      "        \n",
+      "\n",
+      "        Example from \"human_microedit_v2\" Dataset\n",
+      "        Humorous eaxmple: Here ’s the “ certified ” letter saying Trump has no Russian prostitutes  or investors\n",
+      "        \n",
+      "\n",
+      "        Example from \"unfun_me\" Dataset\n",
+      "        Humorous eaxmple: Pitiful Man Frantically Urging Coworkers To Join NHL Fantasy League\n",
+      "        \n",
+      "\n",
+      "        Example from \"semeval_2021_task_7\" Dataset\n",
+      "        Humorous eaxmple: Robert Pattinson once dealt with an obsessed fan by taking her out for dinner and complaining about his life. He says he's able to bore people in two minutes.\n",
+      "        \n",
+      "\n",
+      "        Example from \"semeval_2017_task_7\" Dataset\n",
+      "        Humorous eaxmple: The Net - surfing bandits always ended an operation by clearing out the cash .\n",
+      "        \n",
+      "\n",
+      "        Example from \"reddit_jokes_github\" Dataset\n",
+      "        Humorous eaxmple: Why did the feminist refuse to work at the post office Because it was a mail dominated industry\n",
       "        \n"
      ]
     }
@@ -150,43 +258,6 @@
    "source": [
     "for i in range(len(all_data)):\n",
     "    all_data[i].print_positive_sample()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: HRI_URL=https://drive.google.com/file/d/\n",
-      "env: HRI_PASSWORD=\n"
-     ]
-    }
-   ],
-   "source": [
-    "%env HRI_URL=https://drive.google.com/file/d/\n",
-    "%env HRI_PASSWORD="
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from hri_tools import downlaod"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "downlaod()"
    ]
   },
   {
