add bad word usage statistics

--- a/example.ipynb
+++ b/example.ipynb
@@ -1296,8 +1296,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bad words statistics"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,12 +1318,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bad words statistics"
+    "## Using additional data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,14 +1353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [01:34<00:00,  8.62s/it]\n"
+      "100%|██████████| 11/11 [02:39<00:00, 14.48s/it]\n"
      ]
     }
    ],
@@ -1387,48 +1395,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'funlines_and_human_microedit_paper_2023': {'train_count': 212,\n",
-       "  'test_count': 84,\n",
-       "  'valid_count': 31},\n",
-       " 'one_liners': {'train_count': 347, 'test_count': 102, 'valid_count': 53},\n",
-       " 'onion_or_not': {'train_count': 1180, 'test_count': 326, 'valid_count': 182},\n",
-       " 'pun_of_the_day': {'train_count': 14, 'test_count': 3, 'valid_count': 0},\n",
-       " 'reddit_jokes_last_laught': {'train_count': 3396,\n",
-       "  'test_count': 112,\n",
-       "  'valid_count': 109},\n",
-       " 'semeval_2017_task_7': {'train_count': 13, 'test_count': 2, 'valid_count': 4},\n",
-       " 'semeval_2021_task_7': {'train_count': 512,\n",
-       "  'test_count': 53,\n",
-       "  'valid_count': 109},\n",
-       " 'unfun_me': {'train_count': 31, 'test_count': 3, 'valid_count': 3},\n",
-       " 'short_jokes': {'train_count': 20699,\n",
-       "  'test_count': 4153,\n",
-       "  'valid_count': 2075},\n",
-       " 'the_naughtyformer': {'train_count': 13224,\n",
-       "  'test_count': 3753,\n",
-       "  'valid_count': 1909},\n",
-       " 'meta_dataset': {'train_count': 1460, 'test_count': 392, 'valid_count': 392}}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----funlines_and_human_microedit_paper_2023------\n",
+      "Total examples with bad words 550\n",
+      "Train examples with bad words 370\n",
+      "Test examples with bad words 132\n",
+      "Valid examples with bad words 48\n",
+      "\n",
+      "\n",
+      "-----one_liners------\n",
+      "Total examples with bad words 605\n",
+      "Train examples with bad words 423\n",
+      "Test examples with bad words 123\n",
+      "Valid examples with bad words 59\n",
+      "\n",
+      "\n",
+      "-----onion_or_not------\n",
+      "Total examples with bad words 2066\n",
+      "Train examples with bad words 1438\n",
+      "Test examples with bad words 405\n",
+      "Valid examples with bad words 223\n",
+      "\n",
+      "\n",
+      "-----pun_of_the_day------\n",
+      "Total examples with bad words 23\n",
+      "Train examples with bad words 16\n",
+      "Test examples with bad words 6\n",
+      "Valid examples with bad words 1\n",
+      "\n",
+      "\n",
+      "-----reddit_jokes_last_laught------\n",
+      "Total examples with bad words 4022\n",
+      "Train examples with bad words 3767\n",
+      "Test examples with bad words 133\n",
+      "Valid examples with bad words 122\n",
+      "\n",
+      "\n",
+      "-----semeval_2017_task_7------\n",
+      "Total examples with bad words 26\n",
+      "Train examples with bad words 18\n",
+      "Test examples with bad words 4\n",
+      "Valid examples with bad words 4\n",
+      "\n",
+      "\n",
+      "-----semeval_2021_task_7------\n",
+      "Total examples with bad words 795\n",
+      "Train examples with bad words 610\n",
+      "Test examples with bad words 69\n",
+      "Valid examples with bad words 116\n",
+      "\n",
+      "\n",
+      "-----unfun_me------\n",
+      "Total examples with bad words 53\n",
+      "Train examples with bad words 41\n",
+      "Test examples with bad words 7\n",
+      "Valid examples with bad words 5\n",
+      "\n",
+      "\n",
+      "-----short_jokes------\n",
+      "Total examples with bad words 32267\n",
+      "Train examples with bad words 24561\n",
+      "Test examples with bad words 5148\n",
+      "Valid examples with bad words 2558\n",
+      "\n",
+      "\n",
+      "-----the_naughtyformer------\n",
+      "Total examples with bad words 20795\n",
+      "Train examples with bad words 14557\n",
+      "Test examples with bad words 4139\n",
+      "Valid examples with bad words 2099\n",
+      "\n",
+      "\n",
+      "-----meta_dataset------\n",
+      "Total examples with bad words 2741\n",
+      "Train examples with bad words 1767\n",
+      "Test examples with bad words 500\n",
+      "Valid examples with bad words 474\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "for tn in results_bad_words_stats:\n",
     "    print(f\"-----{tn}------\")\n",
     "\n",
-    "    print(\"Total examples with bad words\", tn[\"total_count\"])\n",
-    "    print(\"Train examples with bad words\", tn[\"train_count\"])\n",
-    "    print(\"Test examples with bad words\", tn[\"test_count\"])\n",
-    "    print(\"Valid examples with bad words\", tn[\"valid_count\"])\n",
+    "    print(\"Total examples with bad words\", results_bad_words_stats[tn][\"total_count\"])\n",
+    "    print(\"Train examples with bad words\", results_bad_words_stats[tn][\"train_count\"])\n",
+    "    print(\"Test examples with bad words\", results_bad_words_stats[tn][\"test_count\"])\n",
+    "    print(\"Valid examples with bad words\", results_bad_words_stats[tn][\"valid_count\"])\n",
+    "    \n",
+    "    print()\n",
+    "    print()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Only vocab from github"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "custom_bad_words = get_bad_words()\n",
+    "profanity.load_censor_words(custom_bad_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 11/11 [02:38<00:00, 14.39s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "results_bad_words_stats = dict()\n",
+    "\n",
+    "for df in tqdm(all_data):\n",
+    "    train_dh = df.get_train()\n",
+    "    test_dh = df.get_test()\n",
+    "    valid_dh = df.get_valid()\n",
+    "\n",
+    "    train_dh[\"is_contain_bad_words_1\"] = train_dh[\"text\"].parallel_apply(lambda text: profanity.contains_profanity(text))\n",
+    "    test_dh[\"is_contain_bad_words_1\"] = test_dh[\"text\"].parallel_apply(lambda text: profanity.contains_profanity(text))\n",
+    "    valid_dh[\"is_contain_bad_words_1\"] = valid_dh[\"text\"].parallel_apply(lambda text: profanity.contains_profanity(text))\n",
+    "\n",
+    "    train_bw = train_dh[train_dh[\"is_contain_bad_words_1\"]].shape[0]\n",
+    "    test_bw = test_dh[test_dh[\"is_contain_bad_words_1\"]].shape[0]\n",
+    "    valid_bw = valid_dh[valid_dh[\"is_contain_bad_words_1\"]].shape[0]\n",
+    "\n",
+    "    results_bad_words_stats[df.name] = {\n",
+    "        \"train_count\": train_bw,\n",
+    "        \"test_count\": test_bw,\n",
+    "        \"valid_count\": valid_bw,\n",
+    "        \"total_count\": train_bw + test_bw + valid_bw\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----funlines_and_human_microedit_paper_2023------\n",
+      "Total examples with bad words 524\n",
+      "Train examples with bad words 354\n",
+      "Test examples with bad words 124\n",
+      "Valid examples with bad words 46\n",
+      "\n",
+      "\n",
+      "-----one_liners------\n",
+      "Total examples with bad words 521\n",
+      "Train examples with bad words 363\n",
+      "Test examples with bad words 107\n",
+      "Valid examples with bad words 51\n",
+      "\n",
+      "\n",
+      "-----onion_or_not------\n",
+      "Total examples with bad words 1960\n",
+      "Train examples with bad words 1371\n",
+      "Test examples with bad words 386\n",
+      "Valid examples with bad words 203\n",
+      "\n",
+      "\n",
+      "-----pun_of_the_day------\n",
+      "Total examples with bad words 22\n",
+      "Train examples with bad words 15\n",
+      "Test examples with bad words 6\n",
+      "Valid examples with bad words 1\n",
+      "\n",
+      "\n",
+      "-----reddit_jokes_last_laught------\n",
+      "Total examples with bad words 3630\n",
+      "Train examples with bad words 3395\n",
+      "Test examples with bad words 123\n",
+      "Valid examples with bad words 112\n",
+      "\n",
+      "\n",
+      "-----semeval_2017_task_7------\n",
+      "Total examples with bad words 23\n",
+      "Train examples with bad words 16\n",
+      "Test examples with bad words 4\n",
+      "Valid examples with bad words 3\n",
+      "\n",
+      "\n",
+      "-----semeval_2021_task_7------\n",
+      "Total examples with bad words 716\n",
+      "Train examples with bad words 544\n",
+      "Test examples with bad words 63\n",
+      "Valid examples with bad words 109\n",
+      "\n",
+      "\n",
+      "-----unfun_me------\n",
+      "Total examples with bad words 48\n",
+      "Train examples with bad words 37\n",
+      "Test examples with bad words 6\n",
+      "Valid examples with bad words 5\n",
+      "\n",
+      "\n",
+      "-----short_jokes------\n",
+      "Total examples with bad words 29716\n",
+      "Train examples with bad words 22629\n",
+      "Test examples with bad words 4721\n",
+      "Valid examples with bad words 2366\n",
+      "\n",
+      "\n",
+      "-----the_naughtyformer------\n",
+      "Total examples with bad words 19541\n",
+      "Train examples with bad words 13696\n",
+      "Test examples with bad words 3863\n",
+      "Valid examples with bad words 1982\n",
+      "\n",
+      "\n",
+      "-----meta_dataset------\n",
+      "Total examples with bad words 2510\n",
+      "Train examples with bad words 1609\n",
+      "Test examples with bad words 465\n",
+      "Valid examples with bad words 436\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tn in results_bad_words_stats:\n",
+    "    print(f\"-----{tn}------\")\n",
+    "\n",
+    "    print(\"Total examples with bad words\", results_bad_words_stats[tn][\"total_count\"])\n",
+    "    print(\"Train examples with bad words\", results_bad_words_stats[tn][\"train_count\"])\n",
+    "    print(\"Test examples with bad words\", results_bad_words_stats[tn][\"test_count\"])\n",
+    "    print(\"Valid examples with bad words\", results_bad_words_stats[tn][\"valid_count\"])\n",
     "    \n",
     "    print()\n",
     "    print()"
